# projects

books/necromancer/: README.md  companions.md  ideas.md  magic-system.md  malik-life-arc.md  world.md
diary/: 20260502 - Very short summary.md  20260503 - CLAUDE.md Woke Up Late.md  20260503 - Hermes Gets Its Blueprint.md  20260509 - Financial Pipeline Built.md  20260510 - April Reconciliation Closes.md  20260514 - The Cars Are Expensive On Purpose.md  20260515 - The Reports Speak Swedish Now.md  20260515b - KBH30Y Joins the Fleet.md  20260515c - Lifestyle Report and the DuckDB Cutover.md  20260516 - The Day The Database Got A Spine.md  20260518 - Contracts Splits and the ECSTER Reveal.md  20260521 - What The Accounts Are Actually Doing.md  __todo.md  _log.md
diary/Dictionary/: calibration-step.md  commit-orchestrator.md  discrepancy-exception.md  ersattningsfond.md  fail-fast-discrepancy.md  marimo.md  on-load-sequence.md  reconciliation-identity.md  terminfo.md
financial_advisor/: .gitignore  CLAUDE.md  Dockerfile  Makefile  pyproject.toml
financial_advisor/src/financial_advisor/: categorize.py  extract.py  report.py
